syntax = "proto3";

package bookstore.user;

import "common.proto";

option go_package = "github.com/bookstore/contracts/gen/go/user;user";
option java_package = "com.bookstore.user";
option java_multiple_files = true;

// Servicio de autenticaci√≥n de usuarios
service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
    
    // Health check
    rpc Health(bookstore.common.Empty) returns (bookstore.common.HealthStatus);
}

// Mensajes para registro de usuario
message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;     // Opcional
    string role = 4;      // Opcional, por defecto CLIENT
}

message RegisterUserResponse {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
    string status = 5;
    string message = 6;
}

// Mensajes para login de usuario
message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
    string token = 5;
    string status = 6;
    string message = 7;
}

// Mensajes para obtener usuario
message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    string user_id = 1;
    string username = 2;
    string email = 3;
    string role = 4;
    int64 created_at = 5;  // Unix timestamp
    int64 updated_at = 6;  // Unix timestamp
}

// Mensajes para actualizar usuario
message UpdateUserRequest {
    string user_id = 1;
    string username = 2;
}

message UpdateUserResponse {
    string user_id = 1;
    string status = 2;
    string message = 3;
}

// Mensajes para eliminar usuario
message DeleteUserRequest {
    string user_id = 1;
}

message DeleteUserResponse {
    string status = 1;
    string message = 2;
}

// Mensajes para verificar token
message VerifyTokenRequest {
    string token = 1;
}

message VerifyTokenResponse {
    string user_id = 1;
    string username = 2;
    string role = 3;
    string status = 4;
    string message = 5;
}
